objects/Client_Intake_Process__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIP_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_To_CIP__c</fullName>
        <formula>HYPERLINK($Setup.CIPIntegration__c.CIP_SF_Org_URL__c &amp; CIP_Id__c,&quot;CIP&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link To CIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Client Intake Processes</relationshipLabel>
        <relationshipName>Client_Intake_Processes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Client Intake Process</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Intake Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Intake Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>